--- a/cabot-ui/src/main/resources/ui.fxml
+++ b/cabot-ui/src/main/resources/ui.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 <BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="com.cegeka.cabot.UiController">
     <right>
         <VBox alignment="CENTER" spacing="10" fx:id="rightPane">
@@ -14,14 +14,14 @@
     <center>
         <ImageView fx:id="currentFrame"/>
     </center>
-    <bottom>
-        <VBox alignment="CENTER" spacing="15">
-            <padding>
-                <Insets top="25" right="25" bottom="25" left="25"/>
-            </padding>
-            <!--<Button fx:id="cameraButton" alignment="center" text="Start camera" onAction="#startCamera" />-->
-            <Separator/>
-            <Label fx:id="hsvCurrentValues"/>
-        </VBox>
-    </bottom>
+    <!--<bottom>-->
+        <!--<VBox alignment="CENTER" spacing="15">-->
+            <!--<padding>-->
+                <!--<Insets top="25" right="25" bottom="25" left="25"/>-->
+            <!--</padding>-->
+            <!--&lt;!&ndash;<Button fx:id="cameraButton" alignment="center" text="Start camera" onAction="#startCamera" />&ndash;&gt;-->
+            <!--<Separator/>-->
+            <!--<Label fx:id="hsvCurrentValues"/>-->
+        <!--</VBox>-->
+    <!--</bottom>-->
 </BorderPane>
