--- a/cabot-ui/src/main/resources/ui.fxml
+++ b/cabot-ui/src/main/resources/ui.fxml
@@ -5,6 +5,10 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="com.cegeka.cabot.UiController">
+    <left>
+        <VBox alignment="CENTER" spacing="10" fx:id="leftPane">
+        </VBox>
+    </left>
     <right>
         <VBox alignment="CENTER" spacing="10" fx:id="rightPane">
             <Button fx:id="fetchStartingHandsButton" alignment="center" text="Fetch starting hands"
